tests/miniJava/neg/006819_mutation.MiniJava
class 0 { public static void Main ( String [ ] java ) { { } } }
